--- a/dss/templates/index.html
+++ b/dss/templates/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
 
-    <form method="post">
-      {% csrf_token %}
-        <select class="form-select" name="vecino" aria-label="Default select example">
+    <form method="get" action={% url 'datos_vecino' %}>
+      
+        <select class="form-select" name="vecino_id" required>
             <option value="" selected>Seleccione el vecino</option>
             {% for vecino in vecinos %}
               <option value="{{ vecino.id }}"> {{vecino.nombre}}</option>
             {% endfor %}
         </select>   
-        <a href="{% url 'datos_vecino' %}?vecino_id={{ vecino.id }}" class="btn btn-primary">Seleccionar</a>
+        <input type="submit" class="btn btn-primary">Seleccionar</a>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
