--- a/dss/templates/index.html
+++ b/dss/templates/index.html
@@ -17,7 +17,7 @@
               <option value="{{ vecino.id }}"> {{vecino.nombre}}</option>
             {% endfor %}
         </select>   
-        <input type="submit" class="btn btn-primary">Seleccionar</a>
+        <input type="submit" class="btn btn-primary" value="Seleccionar"></input>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
