--- a/dss/templates/index.html
+++ b/dss/templates/index.html
@@ -10,13 +10,15 @@
   <body>
 
     <form method="get" action={% url 'datos_vecino' %}>
-      
         <select class="form-select" name="vecino_id" required>
             <option value="" selected>Seleccione el vecino</option>
             {% for vecino in vecinos %}
-              <option value="{{ vecino.id }}"> {{vecino.nombre}}</option>
+              <option value="{{ vecino.id }}"> {{vecino.nombre}} </option>
             {% endfor %}
         </select>   
+        <label> fecha </label>
+        <input value="" name="fecha" type="date" min="2023-01-01" max="2023-01-31" class="form-control"></input>
+        
         <input type="submit" class="btn btn-primary" value="Seleccionar"></input>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
