--- a/dss/templates/datos.html
+++ b/dss/templates/datos.html
@@ -12,6 +12,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
+    {%comment%}
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.11.2/cdn/components/split-panel/split-panel.js"></script>
+    {%endcomment%}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -22,14 +25,17 @@
         Datos de {{ vecino.nombre }}
     </h1>
 
-    <h1>Gráficos</h1>
+    <h1>Gráficos</h1>  
+
 
     {% for chart in charts %}
     <h2>{{ chart.canvas_id }}</h2>
     {% include 'chart.html' with chart=chart%}
     {% endfor %}
 
-    <h1>Gráficos viejos</h1>
+
+    {% comment  %}
+    <h1>Gráficos viejos</h1>    
     <h2>Gráfica de producción y consumo</h2>
     <canvas id="graficoConsumo" style="width:100%;max-width:700px; margin: 10px;"></canvas>
 
@@ -129,6 +135,8 @@
         })
     }) ()
     </script>
+{% endcomment %}   
+
 
 </body>
 
