--- a/dss/templates/index.html
+++ b/dss/templates/index.html
@@ -1,37 +1,23 @@
+{% extends 'base.html' %}
+{% block title %}
+  Seleccionar vecino
+{% endblock %}
+{% block body %}
+  <h1 style="display: flex; justify-content: center; align-items: center; height: 10vh;">Administrador de red electrica de la comunidad</h1>
+  <div style="display: flex; justify-content: center; align-items: center; height: 50vh;">
+    <div class="col-md-4">
+      <form method="get" action="{% url 'datos_vecino' %}">
+        <select class="form-select" name="vecino_id" required>
+          <option value="" selected>Seleccione el vecino</option>
+          {% for vecino in vecinos %}
+            <option value="{{ vecino.id }}">{{ vecino.nombre }}</option>
+          {% endfor %}
+        </select>
 
-<!doctype html>
-<html lang="en" data-bs-theme="dark">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Seleccionar vecino</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1 style="display: flex; justify-content: center; align-items: center; height: 10vh;">Administrador de red electrica de la comunidad</h1>
-    <div style="display: flex; justify-content: center; align-items: center; height: 50vh;">
-      <div  class="col-md-4">
-        <form method="get" action={% url 'datos_vecino' %}>
-          <select class="form-select" name="vecino_id" required>
-              <option value="" selected>Seleccione el vecino</option>
-              {% for vecino in vecinos %}
-                <option value="{{ vecino.id }}"> {{vecino.nombre}} </option>
-              {% endfor %}
-          </select>   
-          
-          <input value="" name="fecha" type="date" min="2023-01-01" max="2023-01-31" class="form-control" required></input>
-          
-          <input type="submit" class="btn btn-primary" value="Seleccionar"></input>
-        </form>
-      </div>
+        <input value="2023-01-01" name="fecha" type="date" min="2023-01-01" max="2023-01-31" class="form-control" required />
+
+        <input type="submit" class="btn btn-primary" value="Seleccionar" />
+      </form>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <footer style="   text-align: center;  background-color: #333 ; color: #fff; padding: 10px; position: fixed; bottom: 0; width: 100%;">Trabajo realizado por Diego Sánz y Martín Villuendas</footer>
-  </body>
-</html> 
-
-
-
-
-
+  </div>
+{% endblock %}
