--- a/dss/templates/base.html
+++ b/dss/templates/base.html
@@ -1,28 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
+      {% block title %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}{% endblock title %}</title>
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-          crossorigin="anonymous"></script>
-  {% block imports %}
-  {% endblock imports %}
-</head>
+      {% endblock %}
+    </title>
+    {% block style %}
 
-<body>
-  {% block body %}
+    {% endblock %}
+    
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    {% block imports %}
 
-  {% endblock body %}
-  <footer
-          style="text-align: center;  background-color: #333 ; color: #fff; padding: 10px; bottom: 0; width: 100%;">
-    Trabajo realizado por Diego Sanz y Martín Villuendas
-  </footer>
-</body>
+    {% endblock %}
+  </head>
 
+  <body class="d-flex flex-column vh-100 m-0">
+    <div class="container-fluid d-flex flex-column flex-fill">
+      {% block body %}
+
+      {% endblock %}
+    </div>
+    <footer class="bg-body-tertiary text-center p-2 hw-100">Trabajo realizado por Diego Sanz y Martín Villuendas</footer>
+  </body>
 </html>
