--- a/dss/templates/base.html
+++ b/dss/templates/base.html
@@ -11,7 +11,7 @@
     {% block style %}
 
     {% endblock %}
-    
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -21,6 +21,46 @@
   </head>
 
   <body class="d-flex flex-column vh-100 m-0">
+    {% block navBar %}
+      <nav class="navbar navbar-expand-sm bg-body-tertiary rounded m-2">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Solar DSS</a>
+          <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"><span class="navbar-toggler-icon"></span></button>
+
+          <div class="navbar-collapse collapse" id="navbar">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Administrador</a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="/">Pagina administrador</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/admin">Django admin</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/test">Test</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/datos">Datos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form role="search">
+              <input class="form-control" type="search" placeholder="Search" />
+            </form>
+          </div>
+        </div>
+      </nav>
+    {% endblock %}
+
     <div class="container-fluid d-flex flex-column flex-fill">
       {% block body %}
 
