--- a/dss/templates/base.html
+++ b/dss/templates/base.html
@@ -52,6 +52,23 @@
               <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Decisiones</a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item disabled" href="/">Compra/venta</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item disabled" href="/">Orientación placas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item disabled" href="/">Aumento participación</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item disabled" href="/">Instalación de baterías</a>
+                  </li>
+                </ul>
+              </li>
             </ul>
             <form role="search">
               <input class="form-control" type="search" placeholder="Search" />
