Cambio para que te pida login en admin django

--- a/dss/templates/base.html
+++ b/dss/templates/base.html
@@ -36,7 +36,7 @@
                     <a class="dropdown-item" href="/">Pagina administrador</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="/admin">Django admin</a>
+                    <a class="dropdown-item" href="/admin/login/?next=/admin/">Django admin</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
