Crear los templates de las decisiones

--- a/dss/templates/base.html
+++ b/dss/templates/base.html
@@ -56,16 +56,13 @@
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Decisiones</a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item disabled" href="/">Compra/venta</a>
+                    <a class="dropdown-item " href="{% url "orientacion_placas" %}">Orientación placas</a>
                   </li>
                   <li>
-                    <a class="dropdown-item disabled" href="/">Orientación placas</a>
+                    <a class="dropdown-item " href="{% url "aumento_participacion" %}">Aumento participación</a>
                   </li>
                   <li>
-                    <a class="dropdown-item disabled" href="/">Aumento participación</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item disabled" href="/">Instalación de baterías</a>
+                    <a class="dropdown-item " href="{% url "baterias" %}">Instalación de baterías</a>
                   </li>
                 </ul>
               </li>
