--- a/dss/templates/decisiones/orientacion_placas.html
+++ b/dss/templates/decisiones/orientacion_placas.html
@@ -13,7 +13,38 @@
 
 {% block body %}
   <div class="d-flex flex-column flex-fill justify-content-center align-items-center">
-    <img height="200" src="{% static 'gif.gif' %}" />
-    <p>Work in progress</p>
+    <img height="50" src="{% static 'gif.gif' %}" />
+    <div class="card mb-4">
+      <div class="row g-0">
+        <div class="col-md-8">
+          {% include 'componentes/chart.html' %}
+        </div>
+        <div class="col-md-4 d-flex align-items-center ">
+          <div class= "flex-column ">
+            <h4>Porcentaje de la energía ahorrada:</h1>
+            • Neutral: {{porcentajes.0|floatformat:"1"}}% <br>
+            • Mañana: {{porcentajes.1|floatformat:"1"}}% <br>
+            • Tarde: {{porcentajes.2|floatformat:"1"}}% <br>
+          </div>
+        </div> 
+      </div>
+    </div>
+    <div class="card">
+      <div class="row g-0">
+        <div class="col-md-8">
+          {% include 'componentes/chart.html' %}
+        </div>
+        <div class="col-md-4 d-flex align-items-center ">
+          <div class= "flex-column ">
+            <h4>Porcentaje de la energía ahorrada:</h1>
+            • Neutral: {{porcentajes.0|floatformat:"1"}}% <br>
+            • Mañana: {{porcentajes.1|floatformat:"1"}}% <br>
+            • Tarde: {{porcentajes.2|floatformat:"1"}}% <br>
+          </div>
+        </div> 
+      </div>
+    </div>
   </div>
+</div>
+
 {% endblock %}
