--- a/dss/templates/componentes/chart.html
+++ b/dss/templates/componentes/chart.html
@@ -1,4 +1,4 @@
-<canvas id='{{ chart.canvas_id }}' style="width:100%;max-width:700px; margin: 10px;"></canvas>
+<canvas id="{{ chart.canvas_id }}" style="width:100%;max-width:700px; margin: 10px;"></canvas>
 <script>
     (() => {
         let chart = new Chart('{{ chart.canvas_id }}', {
