--- a/dss/templates/decisiones/aumento_participacion.html
+++ b/dss/templates/decisiones/aumento_participacion.html
@@ -12,21 +12,21 @@
 {% endblock %}
 
 {% block body %}
-<h1>Porcentajes de produccion de {{vecino.nombre}}</h1>
+  <h1>Porcentajes de produccion de {{ vecino.nombre }}</h1>
   <div class="d-flex flex-column flex-fill justify-content-center align-items-center">
     <div class="card mb-4">
       <div class="row g-0">
         <div class="col-md-8">
           {% include 'componentes/chart.html' %}
         </div>
-        <div class="col-md-4 d-flex align-items-center ">
-          <div class= "flex-column ">
+        <div class="col-md-4 d-flex align-items-center">
+          <div class="flex-column">
             <h4>Porcentajes de produccion:</h4>
-              • Actual: {{porcentaje_actual|floatformat:"1"}}% <br>
-              • Aumento: {{porcentaje_aumento|floatformat:"1"}}% <br>
+            • Actual: {{ porcentaje_actual|floatformat:'1' }}% <br />
+            • Aumento: {{ porcentaje_aumento|floatformat:'1' }}% <br />
           </div>
-        </div> 
-      </div> 
+        </div>
+      </div>
     </div>
     <img height="50" src="{% static 'gif.gif' %}" />
   </div>
