Arregla el icono de imagen no encontrada

--- a/dss/templates/componentes/navbar.html
+++ b/dss/templates/componentes/navbar.html
@@ -44,9 +44,7 @@
         </li>
       </ul>
       <div class="nav-item dropdown me-2">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="" alt="Pepe" width="32" height="32" class="rounded-circle">
-        </a>
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">pepe</a>
         <ul class="dropdown-menu shadow">
           <li><a class="dropdown-item" href="#">Paco</a></li>
           <li><a class="dropdown-item" href="#">Miguel</a></li>
