--- a/dss/templates/componentes/chart.html
+++ b/dss/templates/componentes/chart.html
@@ -8,6 +8,7 @@
                 datasets: [
                     {% for dataset in chart.datasets %}
                     {
+                        label: "{{ dataset.label }}",
                         backgroundColor: "{{ dataset.background_color }}",
                         borderColor: "{{ dataset.border_color }}",
                         data: {{ dataset.data }},
@@ -18,7 +19,7 @@
                 
             },
             options: {
-                legend: { display: false },
+                legend: { display: {{ chart.legend|lower }} },
                 scales:{
                     yAxes: [
                         {% for scale in chart.scales %}  
