--- a/dss/templates/decisiones/orientacion_placas.html
+++ b/dss/templates/decisiones/orientacion_placas.html
@@ -22,7 +22,7 @@ Cambios de orientacion de las placas
   
 
 {% block body %}
-<div class="d-flex flex-column flex-fill offset-xl-2 col-xl-8 col-12">
+<div class="d-flex flex-column flex-fill offset-xl-1 col-xl-10 col-12">
   <div class="accordion open" id="accordionExample">
     {% for item in acordeon %}
     <div class="accordion-item">
@@ -36,9 +36,6 @@ Cambios de orientacion de las placas
            data-bs-parent="#accordionExample">
         <div class="accordion-body">
           <div class="row" min>
-            <div class="col-8">
-              {% include 'componentes/chart.html' with chart=item.chart %}
-            </div>
             <div class="col-4 d-flex align-items-center">
               <div class="flex-column">
                 <h4>Energía ahorrada por las placas:</h4>
@@ -47,31 +44,34 @@ Cambios de orientacion de las placas
                 <table class="table">
                   <tr>
                     <td>Total consumido:</td>
-                    <td>{{ item.totales.total|floatformat:'1' }} kW</td>
+                    <td>{{ item.totales.total|floatformat:'1' }} kWh</td>
                     <td></td>
                     <td>{{ item.precios.0|floatformat:'1' }}€</td>
                   </tr>
                   {% if porcentajes.0 >= porcentajes.1 and porcentajes.0 >= porcentajes.2 %} <tr class="table-text-success"> {% else %}<tr>{% endif %}
                     <td>Neutral:</td>
-                    <td>{{ item.totales.normal|floatformat:'1' }} kW</td>
+                    <td>{{ item.totales.normal|floatformat:'1' }} kWh</td>
                     <td>{{ item.porcentajes.0|floatformat:'1' }}%</td>
                     <td>{{ item.precios.1|floatformat:'1' }}€</td>
                   </tr>
                   {% if porcentajes.1 >= porcentajes.0 and porcentajes.1 >= porcentajes.2 %} <tr class="table-text-success"> {% else %}<tr>{% endif %}
                     <td>Mañana:</td>
-                    <td>{{ item.totales.mañana|floatformat:'1' }} kW</td>
+                    <td>{{ item.totales.mañana|floatformat:'1' }} kWh</td>
                     <td>{{ item.porcentajes.1|floatformat:'1' }}%</td>
                     <td>{{ item.precios.2|floatformat:'1' }}€</td>
                   </tr>            
                   {% if porcentajes.2 >= porcentajes.0 and porcentajes.2 >= porcentajes.1 %} <tr class="table-text-success"> {% else %}<tr>{% endif %}
                     <td>Tarde:</td>
-                    <td>{{ item.totales.tarde|floatformat:'1' }} kW</td>
+                    <td>{{ item.totales.tarde|floatformat:'1' }} kWh</td>
                     <td>{{ item.porcentajes.2|floatformat:'1' }}%</td>
                     <td>{{ item.precios.3|floatformat:'1' }}€</td>
                   </tr>
                 </table>
                 {% endwith %}
               </div>
+            </div>
+            <div class="col-8">
+              {% include 'componentes/chart.html' with chart=item.chart %}
             </div>
           </div>
         </div>
