--- a/dss/templates/componentes/navbar.html
+++ b/dss/templates/componentes/navbar.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-sm bg-body-tertiary rounded m-2">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Solar DSS</a>
-    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"><span class="navbar-toggler-icon"></span></button>
+    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"><span
+        class="navbar-toggler-icon"></span></button>
 
     <div class="navbar-collapse collapse" id="navbar">
       <ul class="navbar-nav me-auto">
@@ -15,7 +16,7 @@
               <a class="dropdown-item" href="/admin/login/?next=/admin/">Django admin</a>
             </li>
             <li>
-              <hr class="dropdown-divider" />
+              <hr class="dropdown-divider"/>
             </li>
             <li>
               <a class="dropdown-item" href="/test">Test</a>
@@ -49,12 +50,14 @@
           <li><a class="dropdown-item" href="#">Paco</a></li>
           <li><a class="dropdown-item" href="#">Miguel</a></li>
           <li><a class="dropdown-item" href="#">...</a></li>
-          <li><hr class="dropdown-divider"></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
           <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
         </ul>
       </div>
       <form role="search">
-        <input class="form-control" type="search" placeholder="Search" />
+        <input class="form-control" type="search" placeholder="Search"/>
       </form>
     </div>
   </div>
