--- a/dss/templates/datos.html
+++ b/dss/templates/datos.html
@@ -14,7 +14,8 @@
 {% endblock %}
 
 {% block body %}
-  <h1 class="display-2" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center;">Datos de {{ vecino.nombre }}</h1>
+  <h1 class="display-2"
+      style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; text-align: center;">Datos de {{ vecino.nombre }}</h1>
 
   <h1>Gráficos</h1>
 
