--- a/dss/templates/decisiones/baterias.html
+++ b/dss/templates/decisiones/baterias.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-  Instalacion de baterias
+  Instalación de baterías
 {% endblock %}
 
 {% block imports %}
@@ -13,7 +13,7 @@
 
 {% block body %}
   <div class="d-flex flex-column flex-fill justify-content-center align-items-center">
-    <img height="200" src="{% static 'gif.gif' %}" />
+    <img height="200" src="{% static 'gif.gif' %}"/>
     <p>Work in progress</p>
   </div>
 {% endblock %}
