--- a/dss/templates/decisiones/aumento_participacion.html
+++ b/dss/templates/decisiones/aumento_participacion.html
@@ -13,88 +13,93 @@
 
 {% block style %}
   <style>
-    .table-text-success>td {
-      color: var(--bs-success) !important
-    }
+      .table-text-success > td {
+          color: var(--bs-success) !important
+      }
   </style>
 {% endblock style %}
 {% block body %}
-<div class="d-flex flex-column flex-fill offset-xl-1 col-xl-10 col-12">
-  <div class="accordion open" id="accordionExample">
-    {% for item in acordeon %}
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button {% if not forloop.first %} collapsed {% endif %}" type="button"
-                data-bs-toggle="collapse" data-bs-target="#collapse{{forloop.counter}}">
-          {{ item.semana }}
-        </button>
-      </h2>
-      <div id="collapse{{forloop.counter}}" class="accordion-collapse collapse {% if forloop.first %} show {% endif %}"
-           data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <div class="row" min>
-            <div class="col-4 d-flex align-items-center">
-              <div class="flex-column">
-                <h4>Energía ahorrada por las placas:</h4>
-                
-                {% with item.porcentajes as porcentajes %}
-                <table class="table">
-                  <tr>
-                    <td>Total consumido:</td>
-                    <td>{{ item.totales.total|floatformat:'1' }} kWh</td>
-                    <td></td>
-                    <td>{{ item.precios.0|floatformat:'1' }}€</td>
-                  </tr>
-                  {% if porcentajes.0 >= porcentajes.1 and porcentajes.0 >= porcentajes.2 %} <tr class="table-text-success"> {% else %}<tr>{% endif %}
-                    <td>Normal:</td>
-                    <td>{{ item.totales.normal|floatformat:'1' }} kWh</td>
-                    <td>{{ item.porcentajes.0|floatformat:'1' }}%</td>
-                    <td id="precio_normal">{{ item.precios.1|floatformat:'1' }}€</td>
-                  </tr>
-                  {% if porcentajes.1 >= porcentajes.0 and porcentajes.1 >= porcentajes.2 %} <tr class="table-text-success"> {% else %}<tr>{% endif %}
-                    <td>Aumentado:</td>
-                    <td>{{ item.totales.aumentado|floatformat:'1' }} kWh</td>
-                    <td id="porcentaje">{{ item.porcentajes.1|floatformat:'1' }}%</td>
-                    <td id="precio_aumentado" >{{ item.precios.2|floatformat:'1' }}€</td>
-                  </tr>
-                </table>
-                {% endwith %}
-                
-                <input type="number" name="" id="">
-                <input type="number" name="" id="precio">
-                <button class="btn btn-primary" onclick="aaa()">Calcular</button>
-                <span id="roi">aa</span>
+  <div class="d-flex flex-column flex-fill offset-xl-1 col-xl-10 col-12">
+    <div class="accordion open" id="accordionExample">
+      {% for item in acordeon %}
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button {% if not forloop.first %} collapsed {% endif %}" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}">
+              {{ item.semana }}
+            </button>
+          </h2>
+          <div id="collapse{{ forloop.counter }}"
+               class="accordion-collapse collapse {% if forloop.first %} show {% endif %}"
+               data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <div class="row" min>
+                <div class="col-4 d-flex align-items-center">
+                  <div class="flex-column">
+                    <h4>Energía ahorrada por las placas:</h4>
+
+                    {% with item.porcentajes as porcentajes %}
+                      <table class="table">
+                        <tr>
+                          <td>Total consumido:</td>
+                          <td>{{ item.totales.total|floatformat:'1' }} kWh</td>
+                          <td></td>
+                          <td>{{ item.precios.0|floatformat:'1' }}€</td>
+                        </tr>
+                        {% if porcentajes.0 >= porcentajes.1 and porcentajes.0 >= porcentajes.2 %}
+                          <tr class="table-text-success"> {% else %}
+                          <tr>{% endif %}
+                        <td>Normal:</td>
+                        <td>{{ item.totales.normal|floatformat:'1' }} kWh</td>
+                        <td>{{ item.porcentajes.0|floatformat:'1' }}%</td>
+                        <td id="precio_normal">{{ item.precios.1|floatformat:'1' }}€</td>
+                        </tr>
+                        {% if porcentajes.1 >= porcentajes.0 and porcentajes.1 >= porcentajes.2 %}
+                          <tr class="table-text-success"> {% else %}
+                          <tr>{% endif %}
+                        <td>Aumentado:</td>
+                        <td>{{ item.totales.aumentado|floatformat:'1' }} kWh</td>
+                        <td id="porcentaje">{{ item.porcentajes.1|floatformat:'1' }}%</td>
+                        <td id="precio_aumentado">{{ item.precios.2|floatformat:'1' }}€</td>
+                        </tr>
+                      </table>
+                    {% endwith %}
+
+                    <input type="number" name="" id="">
+                    <input type="number" name="" id="precio">
+                    <button class="btn btn-primary" onclick="aaa()">Calcular</button>
+                    <span id="roi">aa</span>
+                  </div>
+                </div>
+                <div class="col-8">
+                  {% include 'componentes/chart.html' with chart=item.chart %}
+                </div>
               </div>
-            </div>
-            <div class="col-8">
-              {% include 'componentes/chart.html' with chart=item.chart %}
             </div>
           </div>
         </div>
-      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
-</div>
 
-<script>
-  function aaa() {
-    // total contratado 42 kw
-    function bbb(elemento){
-      return Number(elemento.innerHTML.replace("%", "").replace("€", ""))
-    }
+  <script>
+      function aaa() {
+          // total contratado 42 kw
+          function bbb(elemento) {
+              return Number(elemento.innerHTML.replace("%", "").replace("€", ""))
+          }
 
-    // porcentaje = document.getElementById("porcentaje")
-    precio = document.getElementById("precio")
-    precio_normal = document.getElementById("precio_normal")
-    precio_aumentado = document.getElementById("precio_aumentado")
-    roi = document.getElementById("roi")
+          // porcentaje = document.getElementById("porcentaje")
+          const precio = document.getElementById("precio")
+          const precio_normal = document.getElementById("precio_normal")
+          const precio_aumentado = document.getElementById("precio_aumentado")
+          const roi = document.getElementById("roi")
 
-    diferencia = bbb(precio_aumentado) - bbb(precio_normal)
-    roi.innerHTML = (precio.value/ diferencia / 12).toFixed(1)
-    
+          const diferencia = bbb(precio_aumentado) - bbb(precio_normal)
+          roi.innerHTML = (precio.value / diferencia / 12).toFixed(1)
 
-    //Number(porcentaje.innerHTML.replace("%", ""))
-  }
-</script>
+
+          //Number(porcentaje.innerHTML.replace("%", ""))
+      }
+  </script>
 {% endblock %}
