--- a/dss/templates/decisiones/orientacion_placas.html
+++ b/dss/templates/decisiones/orientacion_placas.html
@@ -3,81 +3,88 @@
 {% load static %}
 
 {% block title %}
-Cambios de orientacion de las placas
+  Cambios de orientación de las placas
 {% endblock %}
 
 {% block imports %}
-<!-- ChartJS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+  <!-- ChartJS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 {% endblock %}
 
 
 {% block style %}
   <style>
-    .table-text-success>td {
-      color: var(--bs-success) !important
-    }
+      .table-text-success > td {
+          color: var(--bs-success) !important
+      }
   </style>
 {% endblock style %}
-  
+
 
 {% block body %}
-<div class="d-flex flex-column flex-fill offset-xl-1 col-xl-10 col-12">
-  <div class="accordion open" id="accordionExample">
-    {% for item in acordeon %}
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button {% if not forloop.first %} collapsed {% endif %}" type="button"
-                data-bs-toggle="collapse" data-bs-target="#collapse{{forloop.counter}}">
-          {{ item.semana }}
-        </button>
-      </h2>
-      <div id="collapse{{forloop.counter}}" class="accordion-collapse collapse {% if forloop.first %} show {% endif %}"
-           data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <div class="row" min>
-            <div class="col-4 d-flex align-items-center">
-              <div class="flex-column">
-                <h4>Energía ahorrada por las placas:</h4>
-                
-                {% with item.porcentajes as porcentajes %}
-                <table class="table">
-                  <tr>
-                    <td>Total consumido:</td>
-                    <td>{{ item.totales.total|floatformat:'1' }} kWh</td>
-                    <td></td>
-                    <td>{{ item.precios.0|floatformat:'1' }}€</td>
-                  </tr>
-                  {% if porcentajes.0 >= porcentajes.1 and porcentajes.0 >= porcentajes.2 %} <tr class="table-text-success"> {% else %}<tr>{% endif %}
-                    <td>Neutral:</td>
-                    <td>{{ item.totales.normal|floatformat:'1' }} kWh</td>
-                    <td>{{ item.porcentajes.0|floatformat:'1' }}%</td>
-                    <td>{{ item.precios.1|floatformat:'1' }}€</td>
-                  </tr>
-                  {% if porcentajes.1 >= porcentajes.0 and porcentajes.1 >= porcentajes.2 %} <tr class="table-text-success"> {% else %}<tr>{% endif %}
-                    <td>Mañana:</td>
-                    <td>{{ item.totales.mañana|floatformat:'1' }} kWh</td>
-                    <td>{{ item.porcentajes.1|floatformat:'1' }}%</td>
-                    <td>{{ item.precios.2|floatformat:'1' }}€</td>
-                  </tr>            
-                  {% if porcentajes.2 >= porcentajes.0 and porcentajes.2 >= porcentajes.1 %} <tr class="table-text-success"> {% else %}<tr>{% endif %}
-                    <td>Tarde:</td>
-                    <td>{{ item.totales.tarde|floatformat:'1' }} kWh</td>
-                    <td>{{ item.porcentajes.2|floatformat:'1' }}%</td>
-                    <td>{{ item.precios.3|floatformat:'1' }}€</td>
-                  </tr>
-                </table>
-                {% endwith %}
+  <div class="d-flex flex-column flex-fill offset-xl-1 col-xl-10 col-12">
+    <div class="accordion open" id="accordionExample">
+      {% for item in acordeon %}
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button {% if not forloop.first %} collapsed {% endif %}" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}">
+              {{ item.semana }}
+            </button>
+          </h2>
+          <div id="collapse{{ forloop.counter }}"
+               class="accordion-collapse collapse {% if forloop.first %} show {% endif %}"
+               data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <div class="row">
+                <div class="col-4 d-flex align-items-center">
+                  <div class="flex-column">
+                    <h4>Energía ahorrada por las placas:</h4>
+
+                    {% with item.porcentajes as porcentajes %}
+                      <table class="table">
+                        <tr>
+                          <td>Total consumido:</td>
+                          <td>{{ item.totales.total|floatformat:'1' }} kWh</td>
+                          <td></td>
+                          <td>{{ item.precios.0|floatformat:'1' }}€</td>
+                        </tr>
+                        {% if porcentajes.0 >= porcentajes.1 and porcentajes.0 >= porcentajes.2 %}
+                          <tr class="table-text-success"> {% else %}
+                          <tr>{% endif %}
+                        <td>Neutral:</td>
+                        <td>{{ item.totales.normal|floatformat:'1' }} kWh</td>
+                        <td>{{ item.porcentajes.0|floatformat:'1' }}%</td>
+                        <td>{{ item.precios.1|floatformat:'1' }}€</td>
+                        </tr>
+                        {% if porcentajes.1 >= porcentajes.0 and porcentajes.1 >= porcentajes.2 %}
+                          <tr class="table-text-success"> {% else %}
+                          <tr>{% endif %}
+                        <td>Mañana:</td>
+                        <td>{{ item.totales.mañana|floatformat:'1' }} kWh</td>
+                        <td>{{ item.porcentajes.1|floatformat:'1' }}%</td>
+                        <td>{{ item.precios.2|floatformat:'1' }}€</td>
+                        </tr>
+                        {% if porcentajes.2 >= porcentajes.0 and porcentajes.2 >= porcentajes.1 %}
+                          <tr class="table-text-success"> {% else %}
+                          <tr>{% endif %}
+                        <td>Tarde:</td>
+                        <td>{{ item.totales.tarde|floatformat:'1' }} kWh</td>
+                        <td>{{ item.porcentajes.2|floatformat:'1' }}%</td>
+                        <td>{{ item.precios.3|floatformat:'1' }}€</td>
+                        </tr>
+                      </table>
+                    {% endwith %}
+                  </div>
+                </div>
+                <div class="col-8">
+                  {% include 'componentes/chart.html' with chart=item.chart %}
+                </div>
               </div>
-            </div>
-            <div class="col-8">
-              {% include 'componentes/chart.html' with chart=item.chart %}
             </div>
           </div>
         </div>
-      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
-</div>
 {% endblock %}
