--- a/dss/templates/index.html
+++ b/dss/templates/index.html
@@ -14,9 +14,15 @@
           {% endfor %}
         </select>
 
-        <input value="2023-01-01" name="fecha" type="date" min="2023-01-01" max="2023-01-31" class="form-control" required />
+        <input value="2023-01-01"
+               name="fecha"
+               type="date"
+               min="2023-01-01"
+               max="2023-01-31"
+               class="form-control"
+               required/>
 
-        <input type="submit" class="btn btn-primary" value="Seleccionar" />
+        <input type="submit" class="btn btn-primary" value="Seleccionar"/>
       </form>
     </div>
   </div>
